# vam_backend

./: db.sqlite3  manage.py  pyproject.toml
address/: serializers.py
address/models/: country_model.py  models.py
client_facility/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
client_facility/migrations/: 0001_initial.py  0002_alter_clientfacility_options.py
image/: admin.py  models.py  serializers.py  views.py
image/migrations/: 0001_initial.py  0002_alter_image_file.py  0003_remove_image_path.py
menu/: admin.py  urls.py  views.py
menu/migrations/: 0001_initial.py  0002_alter_menucategory_options.py
menu/models/: menu_category_model.py  menu_item_model.py  menu_model.py
menu/serializers/: menu_category_serializer.py  menu_item_serializer.py  menu_serializer.py
order/: admin.py  urls.py  views.py
order/consumers/: order_status_consumer.py  waiter_notifications_consumer.py
order/migrations/: 0001_initial.py  0002_alter_orderitem_order_id.py  0002_auto_20211207_1103.py
order/models/: order_item_model.py  order_model.py
order/serializers/: order_item_serializer.py  order_serializer.py
shared/: apps.py  date_utils.py
shared/enums/: order_status_enum.py
shared/migrations/: 0001_initial.py
shared/models/: admin_id_model.py  custom_api_view.py  soft_deletable_manager.py  soft_deletable_model.py
table/: admin.py  models.py
table/migrations/: 0001_initial.py
vam/: asgi.py  settings.py  urls.py  wsgi.py
waiter/: admin.py  models.py
waiter/migrations/: 0001_initial.py
